--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toiletswap-libs/uikit",
   "version": "0.1.0",
-  "description": "Set of UI components for pancake projects",
+  "description": "Set of UI components for toiletswap projects",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
